server-presence.log

> server@1.0.0 dev
> node --watch index.js

[dotenv@17.2.4] injecting env (2) from .env -- tip: 📡 add observability to secrets: https://dotenvx.com/ops
Connected to MongoDB
Server running on port 3001
User connected: ROdcSl6OOdE3Nir6AAAB
User disconnected: ROdcSl6OOdE3Nir6AAAB
Restarting 'index.js'
Restarting 'index.js'
Restarting 'index.js'
[dotenv@17.2.4] injecting env (0) from .env -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
Missing MongoDB connection string. Set DB_URI or MONGODB_URI in server/.env.
Failed running 'index.js'. Waiting for file changes before restarting...
Restarting 'index.js'
C:\GIT HUB\major project\server\index.js:36
<<<<<<< HEAD
^^

SyntaxError: Unexpected token '<<'
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at Module._compile (node:internal/modules/cjs/loader:1786:20)
    at Object..js (node:internal/modules/cjs/loader:1943:10)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.14.0
Failed running 'index.js'. Waiting for file changes before restarting...
Restarting 'index.js'
[dotenv@17.2.4] injecting env (0) from .env -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild
Missing MongoDB connection string. Set DB_URI or MONGODB_URI in server/.env.
Failed running 'index.js'. Waiting for file changes before restarting...
Restarting 'index.js'
[dotenv@17.2.4] injecting env (1) from .env -- tip: 🔐 encrypt with Dotenvx: https://dotenvx.com
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::3001
    at Server.setupListenHandle [as _listen2] (node:net:1948:16)
    at listenInCluster (node:net:2005:12)
    at Server.listen (node:net:2110:7)
    at Object.<anonymous> (C:\GIT HUB\major project\server\index.js:412:8)
    at Module._compile (node:internal/modules/cjs/loader:1812:14)
    at Object..js (node:internal/modules/cjs/loader:1943:10)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1984:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 3001
}

Node.js v24.14.0
Failed running 'index.js'. Waiting for file changes before restarting...
Restarting 'index.js'
[dotenv@17.2.4] injecting env (1) from .env -- tip: ✅ audit secrets and track compliance: https://dotenvx.com/ops
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::3001
    at Server.setupListenHandle [as _listen2] (node:net:1948:16)
    at listenInCluster (node:net:2005:12)
    at Server.listen (node:net:2110:7)
    at Object.<anonymous> (C:\GIT HUB\major project\server\index.js:412:8)
    at Module._compile (node:internal/modules/cjs/loader:1812:14)
    at Object..js (node:internal/modules/cjs/loader:1943:10)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1984:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 3001
}

Node.js v24.14.0
Failed running 'index.js'. Waiting for file changes before restarting...
Restarting 'index.js'
[dotenv@17.2.4] injecting env (1) from .env -- tip: ⚙️  enable debug logging with { debug: true }
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::3001
    at Server.setupListenHandle [as _listen2] (node:net:1948:16)
    at listenInCluster (node:net:2005:12)
    at Server.listen (node:net:2110:7)
    at Object.<anonymous> (C:\GIT HUB\major project\server\index.js:583:8)
    at Module._compile (node:internal/modules/cjs/loader:1812:14)
    at Object..js (node:internal/modules/cjs/loader:1943:10)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1984:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 3001
}

Node.js v24.14.0
Failed running 'index.js'. Waiting for file changes before restarting...
^C^C